C++II/.metadata/.plugins/org.eclipse.cdt.ui/(11-09) AirProject.build.log
14:09:26 **** Incremental Build of configuration Debug for project (11-09) AirProject ****
make all 
Building file: ../src/(11-09) AirProject.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/(11-09) AirProject.d" -MT"src/(11-09)\ AirProject.d" -o "src/(11-09) AirProject.o" "../src/(11-09) AirProject.cpp"
../src/(11-09) AirProject.cpp: In function ‘int main()’:
../src/(11-09) AirProject.cpp:33:20: error: ‘ReadInt’ was not declared in this scope
    Size = ReadInt ();
                    ^
../src/(11-09) AirProject.cpp:72:23: error: ‘ReadString’ was not declared in this scope
     Size = ReadString();
                       ^
../src/(11-09) AirProject.cpp:93:21: error: expected primary-expression before ‘;’ token
      delete [] Party;
                     ^
make: *** [src/(11-09) AirProject.o] Error 1

14:09:27 Build Finished (took 475ms)

